# ircxxd

./: .gitmodules  CMakeLists.txt  README.md  command.hpp  irc_error.hpp  irc_server.hpp  main.cpp
cmake/: FindLibUV.cmake
